css change(background) for pricing

--- a/stylesPrice.css
+++ b/stylesPrice.css
@@ -32,7 +32,7 @@
 }
 
 .price-col{
-    background: #1f283b;
+    background: #000000;
     padding: 10% 15%;
     border-radius: 10px;
     color:#fff;
