--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem calc((100vw - 1300px) / 2);
+    padding: 0rem;
  }
   
  .logo {
