--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,37 @@ nav {
  nav a:hover {
     color: #fff;
  }
+
+ .navbar .dropdown:hover .dropbtn {
+   background-color: #573DFC;
+ }
+ 
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #000;
+   min-width: 160px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+ }
+
+ .dropdown-content a {
+   float: none;
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+   text-align: left;
+ }
+
+ .dropdown-content a:hover {
+   background-color: #ddd;
+ }
+ 
+ .dropdown:hover .dropdown-content {
+   display: block;
+ }
+ 
   
  .background1 {
     background: #fff;
