--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ nav {
 
  .nav-items{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0rem;
  }
@@ -42,8 +42,8 @@ nav {
  
 
  .dropdown-content {
-   display: none;
-   position: absolute;
+   display: flex;
+   justify-content: space-evenly;
    background-color: #fff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
