--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ nav {
  
 
  .dropdown-content {
-   display: flex;
-   justify-content: space-evenly;
+   display: none;
+   position: absolute;
    background-color: #fff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
