--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ nav {
    z-index: 1;
  }
 
- .dropdown-content a {
+ .dropdown-content {
    float: none;
    color: black;
    padding: 12px 16px;
