--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ nav {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 0rem;
+  gap: 3rem;
  }
   
  .logo {
@@ -33,7 +33,8 @@ nav {
  nav a {
     text-decoration: none;
     color: #000;
-    padding: 0 1.5rem;
+    padding: 1.5rem;
+    display: block
  }
   
  nav a:hover {
@@ -42,20 +43,14 @@ nav {
  
 
  .dropdown-content {
-   display: none;
+   display: block;
    position: absolute;
    background-color: #fff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
- }
-
- .dropdown-content {
-   float: none;
-   color: black;
    padding: 12px 16px;
    text-decoration: none;
-   display: block;
    text-align: left;
  }
 
