--- a/styles.css
+++ b/styles.css
@@ -40,10 +40,10 @@ nav {
  nav a:hover {
     color: #fff;
  }
-  
+
  .background1 {
     background: #fff;
-	border-style: solid
+	  border-style: solid
  }
   
 .background2 {
@@ -131,10 +131,24 @@ nav {
     align-items: center;
     padding: 0rem 2rem;
  }
+
+ .column-center {
+   display: block;
+   justify-content: center;
+   align-items: center;
+   padding: 0rem 2rem; 
+ }
   
  .image {
     width: 100%;
     height: 100%;
+ }
+
+ #list1{
+   text-align: center;
+   color: #000;
+   list-style: square;
+   list-style-position: inside;
  }
   
  @media screen and (max-width: 768px) {
