--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,42 @@ nav {
    list-style: square;
    list-style-position: inside;
  }
+
+ .dropdown .dropbtn {
+   border: none;
+   outline: none;
+   color: #000;
+   background-color: inherit;
+   font-family: inherit;
+   margin: 0;
+ }
+
+ .dropdown-content {
+   display: none; /* Hide before hover */
+   position: absolute;
+   background-color: #fff;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+ }
+
+ .dropdown-content a {
+   float: none;
+   color: black;
+   padding: 1rem;
+   text-decoration: none;
+   display: block;
+   text-align: left;
+ }
+
+ .dropdown-content a:hover {
+   background-color: #573DFC;
+   color : #fff;
+ }
+
+ /* Show the dropdown menu on hover. Important! */
+ .dropdown:hover .dropdown-content {
+   display: block;
+ }
   
  @media screen and (max-width: 768px) {
     .container {
