--- a/styles.css
+++ b/styles.css
@@ -132,13 +132,6 @@ nav {
     padding: 0rem 2rem;
  }
 
- .column-center {
-   display: block;
-   justify-content: center;
-   align-items: center;
-   padding: 0rem 2rem; 
- }
-  
  .image {
     width: 100%;
     height: 100%;
@@ -149,6 +142,13 @@ nav {
    color: #000;
    list-style: square;
    list-style-position: inside;
+ }
+
+ /* Navigation Dropdown Menu CSS*/
+
+ .dropdown {
+   float: none;
+   overflow: hidden; 
  }
 
  .dropdown .dropbtn {
@@ -186,6 +186,8 @@ nav {
  .dropdown:hover .dropdown-content {
    display: block;
  }
+
+  /* Navigation Dropdown Menu CSS END*/
   
  @media screen and (max-width: 768px) {
     .container {
