--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ nav {
 /* Create four equal columns that floats next to each other */
 .column {
   float: left;
-  width: 22%;
+  width: 20%;
   padding: 10px;
   height: 800px;
 }
@@ -234,3 +234,10 @@ nav {
   margin-left: auto;
   margin-right: auto;
 }
+
+ /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+ @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  } 
