--- a/styles.css
+++ b/styles.css
@@ -239,13 +239,13 @@ nav {
 }
 } 
 
-.h3{
+.column h1{
   font-size: 1.5rem;
   font-style: bold;
 
 }
 
-.h4{
+.column h2{
   font-size: 1.2rem;
 
 }
