--- a/styles.css
+++ b/styles.css
@@ -242,14 +242,14 @@ nav {
 }
 } 
 
-.column h1{
+.h3{
   font-size: 1.5rem;
   font-style: bold;
   justify-content: center;
 
 }
 
-.column h2{
+.h4{
   font-size: 1.2rem;
   justify-content: center;
 
