--- a/styles.css
+++ b/styles.css
@@ -214,138 +214,173 @@ nav {
 * {
     box-sizing: border-box;
 }
-/* Create four equal columns that floats next to each other */
-.column {
-  float: left;
-  border: #000;
-  width: 33.33%;
-  padding: 10px;
+  /* Create four equal columns that floats next to each other */
+  .column {
+    float: left;
+    border: #000;
+    width: 33.33%;
+    padding: 10px;
 }
 
 /* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.imground {
-  width: 115px;
-  border-radius: 50%;
-  margin-left: auto;
-  margin-right: auto;
+  .imground {
+    width: 115px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
- /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
- @media screen and (max-width: 768px) {
-.column {
-      width: 100%;
-}
+  /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 768px) {
+  .column {
+        width: 100%;
+  }
 } 
 
-.h3{
-  font-size: 1.5rem;
-  font-style: bold;
-  text-align: center;
+  .h3{
+    font-size: 1.5rem;
+    font-style: bold;
+    text-align: center;
 
 }
 
-.h4{
-  font-size: 1.2rem;
-  font-style: bold;
-  text-align: center;
+  .h4{
+    font-size: 1.2rem;
+    font-style: bold;
+    text-align: center;
 
 }
 
-.h5{
-  font-size: 1.2rem;
-  text-align: center;
+  .h5{
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 /* Chris's Page CSS END */
 
+
+/* Ryan's Page CSS START*/ 
+
+  #list1{
+  text-align: center;
+  color: #000;
+  list-style: square;
+  list-style-position: inside;}
+
+  .background3{
+  background: #573DFC;
+  border-style: solid;
+  opacity: 75%;
+  }
+
+  image.centered{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+
+    /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 768px) {
+  .column {
+        width: 100%;
+  }
+  } 
+
+  /* Ryan's Page CSS END */
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+}
+}
+
 /* Template for About Us Page */
 
-*{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-}
+  *{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
+  }
 
-.container{
-  width: 100%;
-  min-height: 100vh;
-  background: #573DFC;
-  opacity: 50%;
-}
+  .container{
+    width: 100%;
+    min-height: 100vh;
+    background: #573DFC;
+    opacity: 50%;
+  }
 
-.container h2{
-  color: #fff;
-  font-size: 32px;
-  padding: 50px 0;
-  text-align: center;
-}
+  .container h2{
+    color: #fff;
+    font-size: 32px;
+    padding: 50px 0;
+    text-align: center;
+  }
 
-.names-row{
-  width:90%;
-  max-width: 1100px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); 
-  grid-gap: 25px;
-}
+  .names-row{
+    width:90%;
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); 
+    grid-gap: 25px;
+  }
 
-.names{
-  background: #000000;
-  padding: 10% 15%;
-  border-radius: 10px;
-  color:#fff;
-  text-align: center 
-}
+  .names{
+    background: #000000;
+    padding: 10% 15%;
+    border-radius: 10px;
+    color:#fff;
+    text-align: center 
+  }
 
-.names p{
-  font-size: 20px;
+  .names p{
+    font-size: 20px;
 
-}
+  }
 
-.names h3{
-  font-size: 12px;
-  margin: 20px 0px 40px; 
-  font-weight: 500
-}
+  .names h3{
+    font-size: 12px;
+    margin: 20px 0px 40px; 
+    font-weight: 500
+  }
 
-.names ul{
-  text-align: left;
-  margin: 20px 0;
-  color: #fff;
-  list-style: none;
-}
+  .names ul{
+    text-align: left;
+    margin: 20px 0;
+    color: #fff;
+    list-style: none;
+  }
 
-.names ul li{
-  margin: 15px 0;
-}
+  .names ul li{
+    margin: 15px 0;
+  }
 
-.names ul li::before{
-  content:'\2022';
-  color:#e330d4;
-  font-weight: bold;
-  margin-right: 8px;
-} 
+  .names ul li::before{
+    content:'\2022';
+    color:#e330d4;
+    font-weight: bold;
+    margin-right: 8px;
+  } 
 
-.names button{
-  width:100%;
-  padding : 14px 0;
-  background: #573DFC;
-  color:rgb(0, 0, 0);
-  font: size 15px;
-  border:1px solid #e330d4;
-  border-radius:6px;
-  margin-top:30px;
-  cursor:pointer; 
-}
+  .names button{
+    width:100%;
+    padding : 14px 0;
+    background: #573DFC;
+    color:rgb(0, 0, 0);
+    font: size 15px;
+    border:1px solid #e330d4;
+    border-radius:6px;
+    margin-top:30px;
+    cursor:pointer; 
+  }
 
-.names button:hover{
-  background: #e330d4;
-}
+  .names button:hover{
+    background: #e330d4;
+  }
