--- a/styles.css
+++ b/styles.css
@@ -202,12 +202,22 @@ nav {
    margin-right: auto;
    }
 
-  /* Grace's Page CSS END */
- @media screen and (max-width: 768px) {
-    .container {
-      grid-template-columns: 1fr;
+   #PLayout1{
+    display: block;
+    font-size: 1.5rem;
+    color: #fff;
+    text-align: center;
    }
- }
+
+   #HLayout1{
+    display: block;
+    font-size: 2.5rem;
+    color: #fff;
+    text-align: center; 
+   }
+   
+  /* Grace's Page CSS END */
+ 
 
   /* Chris's Page CSS START*/
 
@@ -236,13 +246,6 @@ nav {
     margin-right: auto;
 }
 
-  /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 768px) {
-  .column {
-        width: 100%;
-  }
-} 
-
   .h3{
     font-size: 1.5rem;
     font-style: bold;
@@ -264,3 +267,15 @@ nav {
 
 /* Chris's Page CSS END */
 
+/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
+
+  @media screen and (max-width: 768px) {
+    .column {
+          width: 100%;
+    }
+    .container {
+      grid-template-columns: 1fr;
+   }
+  } 
+  
+/*Responsive layout end*/
