--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ nav {
 }
 
 .container2{
-  margin: 3rem;
+  margin: 2rem;
   width: 100%; 
 }
 
@@ -215,7 +215,14 @@ nav {
     color: #fff;
     text-align: center; 
    }
-   
+
+   #PLayout2{
+    display: block;
+    font-size: 0.75rem;
+    color: rgb(83, 79, 79);
+    text-align: center;
+   }
+
   /* Grace's Page CSS END */
  
 
