--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,8 @@ nav {
     font-size: 1.5rem;
     color: #fff;
     text-align: center;
+    margin-right: 80em;
+    margin-left: 80em; 
    }
 
    #HLayout1{
@@ -218,7 +220,7 @@ nav {
 
    #PLayout2{
     display: block;
-    font-size: 0.75rem;
+    font-size: 0.90rem;
     color: rgb(83, 79, 79);
     text-align: center;
    }
