--- a/styles.css
+++ b/styles.css
@@ -186,9 +186,10 @@ nav {
 
   #list1{
    text-align: center;
-   color: #000;
+   color: #fff;
    list-style: square;
-   list-style-position: inside;}
+   list-style-position: inside;
+   font-size: 1.5rem}
 
    .background3{
    background: #573DFC;
