--- a/styles.css
+++ b/styles.css
@@ -113,76 +113,74 @@ body {
 
  /* Navigation Dropdown Menu CSS*/
 
- nav {
-  height: 80px;
-  background: #573DFC;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0rem;
-}
-
-.nav-items{
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-gap: 3rem;
-}
-
-nav a {
-  text-decoration: none;
-  color: #000;
-  padding: 1.5rem;
-  display: block
-}
-
-nav a:hover {
-  color: #fff;
-}
-
+ /* Navbar container */
 .navbar {
   overflow: hidden;
   background-color: #573DFC;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;;
 }
 
- .dropdown .dropbtn {
-   border: none;
-   outline: none;
-   color: #573DFC;
-   background-color: inherit;
-   font-family: inherit;
-   margin: 0;
- }
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
- .dropdown-content {
-   display: none; /* Hide before hover */
-   position: absolute;
-   background-color: #fff;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-   float: none;
-   overflow: hidden; 
-   z-index: 1;
- }
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
 
- .dropdown-content a {
-   float: none;
-   color: black;
-   padding: 1rem;
-   text-decoration: none;
-   display: block;
-   text-align: left;
- }
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
 
- .dropdown-content a:hover {
-   background-color: #573DFC;
-   color : #fff;
- }
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #fff;
+}
 
- /* Show the dropdown menu on hover. Important! */
- .dropdown:hover .dropdown-content {
-   display: block;
- }
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
   /* Navigation Dropdown Menu CSS END*/
 
