--- a/styles.css
+++ b/styles.css
@@ -111,12 +111,17 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0rem;
+  height: 70px;
 }
 
  /* Navbar container */
 .navbar {
   overflow: hidden;
   background-color: #573DFC;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem;
 }
 
 /* Links inside the navbar */
@@ -150,6 +155,7 @@ body {
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: #fff;
+  color: #573DFC;
 }
 
 /* Dropdown content (hidden by default) */
