--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ body {
   }
   
   /* Position the image container (needed to position the left and right arrows) */
-  .container {
+  .container4 {
     position: relative;
   }
   
