--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ body {
   .prev,
   .next {
     cursor: pointer;
-    position: absolute;
+    position: relative;
     top: 40%;
     width: auto;
     padding: 16px;
