--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,7 @@ body {
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
+    display:none;
   }
   
   /* Position the "next button" to the right */
