--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
   }
 
  .background1 {
