--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
   font-style: italic;
-  padding: 0 2rem;
+  padding-right: 15 rem;
 }
 
  /* Navbar container */
