trying to make the nav look better

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ body {
   font-weight: bold;
   font-style: italic;
   padding-right: 15 rem;
+  padding-left: 10rem;
 }
 
  /* Navbar container */
