--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,28 @@ body {
     height: 100%;
  }
 
+ /* Custom Scroll Bar */ 
+ /* width */
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #fff; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #573DFC; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #573DFC; 
+}
  /* Navigation Dropdown Menu CSS*/
 
  .minimargin{
