--- a/styles.css
+++ b/styles.css
@@ -377,7 +377,7 @@ body {
       display: block;
       font-size: 0.90rem;
       color: rgb(0, 0, 0);
-      text-align: right;
+      text-align: center;
      }
  
     .image1 {
