--- a/styles.css
+++ b/styles.css
@@ -446,7 +446,6 @@ body {
 /*     Will's Page    */
 /**************************/
 
-
 /*CSS Start*/
 
 .background000{
@@ -514,11 +513,11 @@ body {
 .resize_fit_center {
   max-width:100%;
   max-height:100%;
+  text-align: center;
   vertical-align: middle;
 }
 
 /*CSS End*/
-
 
 /**************************/
 /*     Ryan's Page    */
