--- a/styles.css
+++ b/styles.css
@@ -604,30 +604,24 @@ body {
 /*     Back To Top Button     */
 /******************************/
 #myBtn {
-	z-index: 99;
-	right: 20px;
-	width: 52px;
-	height: 52px;
-	bottom: 20px;
-	border: none;
-	outline: none;
-	display: none;
-	position: fixed;
-	cursor: pointer;
-	border-radius: 50%;
-	background-color: #ffffff;
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
 }
 
 #myBtn:hover {
-  	background-color: #0f0f11;
+  background-color: #555; /* Add a dark-grey background on hover */
 }
-
-#myBtn img {
-	width: 18px;
-	margin-left: 0.125rem;
-	margin-bottom: 0.25rem;
-}
-
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 
